[gd_scene load_steps=4 format=3 uid="uid://cpdteo4l155r1"]

[ext_resource type="Theme" uid="uid://cvs3ru70gnho3" path="res://addons/fart_engine/Database_Manager/Theme and Style/main_15.tres" id="1"]
[ext_resource type="Script" path="res://addons/fart_engine/Database_Manager/Popup_Forms/PopupTableSelect.gd" id="2"]
[ext_resource type="PackedScene" path="res://addons/fart_engine/Database_Manager/Scenes and Scripts/UI_Input_Scenes/NewField_Input.tscn" id="3"]

[node name="popup_TableSelect" type="ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource("1")
color = Color(0.027451, 0.027451, 0.027451, 1)
script = ExtResource("2")

[node name="PanelContainer" type="Panel" parent="."]
self_modulate = Color(0, 0, 0, 1)
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -236.5
offset_top = -77.5
offset_right = 236.5
offset_bottom = 77.5
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_layout_mode = 1

[node name="VBox1" type="VBoxContainer" parent="PanelContainer"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="HBox1" parent="PanelContainer/VBox1" instance=ExtResource("3")]
anchor_right = 0.0
anchor_bottom = 0.0
offset_right = 473.0
offset_bottom = 75.0
size_flags_vertical = 3

[node name="VBox1" parent="PanelContainer/VBox1/HBox1" index="0"]
visible = false

[node name="VBox2" parent="PanelContainer/VBox1/HBox1" index="1"]
visible = false

[node name="ItemType_Selection" parent="PanelContainer/VBox1/HBox1/VBox2" index="0"]
visible = false

[node name="Table_Selection" parent="PanelContainer/VBox1/HBox1" index="2"]
visible = true
offset_left = 0.0
offset_right = 473.0
offset_bottom = 75.0

[node name="Label" parent="PanelContainer/VBox1/HBox1/Table_Selection" index="0"]
offset_right = 473.0
offset_bottom = 25.0

[node name="Input" parent="PanelContainer/VBox1/HBox1/Table_Selection" index="1"]
offset_top = 29.0
offset_right = 473.0
offset_bottom = 75.0

[node name="HBox2" type="HBoxContainer" parent="PanelContainer/VBox1"]
offset_top = 79.0
offset_right = 473.0
offset_bottom = 155.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Accept" type="Button" parent="PanelContainer/VBox1/HBox2"]
offset_right = 234.0
offset_bottom = 76.0
size_flags_horizontal = 3
text = "Accept"

[node name="Cancel" type="Button" parent="PanelContainer/VBox1/HBox2"]
offset_left = 238.0
offset_right = 473.0
offset_bottom = 76.0
size_flags_horizontal = 3
text = "Cancel"

[connection signal="visibility_changed" from="." to="." method="_on_popup_newValue_visibility_changed"]
[connection signal="item_selected" from="PanelContainer/VBox1/HBox1/Table_Selection/Input" to="." method="_on_Input_item_selected"]
[connection signal="button_up" from="PanelContainer/VBox1/HBox2/Accept" to="." method="_on_Accept_button_up"]
[connection signal="button_up" from="PanelContainer/VBox1/HBox2/Cancel" to="." method="_on_Cancel_button_up"]

[editable path="PanelContainer/VBox1/HBox1"]
[editable path="PanelContainer/VBox1/HBox1/VBox1/Input_Text"]
[editable path="PanelContainer/VBox1/HBox1/VBox2/ItemType_Selection"]
[editable path="PanelContainer/VBox1/HBox1/Table_Selection"]
